fix: button styles on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -188,7 +188,9 @@ textarea {
 }
 
 .btn {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
   font-weight: 600;
@@ -199,6 +201,12 @@ textarea {
   cursor: pointer;
   transition: scale 0.3s ease;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (max-width: 500px) {
+  .btn {
+    width: 100%;
+  }
 }
 
 .btn--secondary {
@@ -216,10 +224,6 @@ textarea {
 
 .btn:hover {
   scale: 1.05;
-}
-
-.btn--settings {
-  margin-top: 1.5rem;
 }
 
 .form {
@@ -241,6 +245,22 @@ textarea {
   display: flex;
   align-items: end;
   gap: 0.75rem;
+}
+
+@media screen and (max-width: 500px) {
+  .form__actions {
+    width: 100%;
+    align-items: stretch;
+    flex-direction: column-reverse;
+  }
+
+  .form__actions--no-reverse {
+    flex-direction: column;
+  }
+}
+
+.form__actions--account {
+  margin-top: 1.5rem;
 }
 
 .user__info {
